backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintrack-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fintrack-backend
  template:
    metadata:
      labels:
        app: fintrack-backend
    spec:
      containers:
      - name: fintrack-backend
        image: 769566606250.dkr.ecr.eu-north-1.amazonaws.com/fintrack-backend:latest
        ports:
        - containerPort: 5000
